--- a/master.css
+++ b/master.css
@@ -21,10 +21,10 @@ p {
 }
 
 
-
 a {
     text-decoration: none;
 }
+
 
 img {
     height: 100%;
@@ -34,7 +34,7 @@ img {
 }
 
 h1 {
-    font-size: clamp(24px, 7vw, 48px);
+    font-size: clamp(24px, 5.5vw, 48px);
     font-weight: 200;
     color: grey;
     margin-top: 20px;
@@ -55,6 +55,7 @@ h3 {
 video {
     width: 100%;
     height: auto;
+    object-fit: cover;
 }
 
 .wOrizzontale {
@@ -105,7 +106,7 @@ video {
 /*background: rgba(200, 200, 200, 0.1);*/
 
 #logo {
-    height: clamp(40px, 4vw, 64px);
+    height: clamp(40px, 3vw, 56px);
     margin-right: 5%;
 }
 
@@ -191,17 +192,19 @@ li a:hover {
 }
 
 
+
 .about-text {
-    grid-row: 1;
-    margin-top: 10px;
+    font-size: clamp(14px, 2.5vw, 24px);
+  }
+
+  .real-about-text {
     grid-column: 1 / span 3;
-    font-size: clamp(16px, 4vw, 40px);
-
-
+    font-size: clamp(16px, 3vw, 32px);
 }
 
+
 .about-text p {
-    transition: 0.4s;
+    transition: 0.3s;
 }
 
 .about-text p:hover {
@@ -221,17 +224,24 @@ li a:hover {
 
 
 .about-info {
-  /*  grid-row: 2;
-    grid-column: span 3; */
+
     font-size: clamp(14px, 2.5vw, 18px);
 }
 
+.about-info p a{
+    transition: 0.4s;
+    color: #141414;
+}
 .about-info p {
     transition: 0.4s;
     color: #141414;
 }
 
-.about-info:hover p {
+.about-info p:hover {
+    color: whitesmoke;
+}
+
+.about-info p a:hover {
     color: whitesmoke;
 }
 
@@ -242,12 +252,8 @@ li a:hover {
     width: clamp(105px, 20vw, 200px);
     border-radius: 6px;
     box-sizing: border-box;
-    transition: 0.3s;
     object-fit: cover;
     margin-right: 20px;
-}
-.about-img:hover {
-    border: 6px solid grey;
 }
 
 .about-img img {
@@ -364,22 +370,41 @@ li a:hover {
 
 footer {
     margin-top: 7vh;
-    padding-bottom: 50px;
-   
+    padding-top: 30px;
+    padding-bottom: 20px;
     background-color: #353535;
 }
 
+footer p a {
+    color: gray;
+}
+
+.footerWrap {
+    display: flex;
+    align-items:flex-start;
+    justify-content: center;
+    column-gap: 20px;  
+    row-gap: 30px;  
+    flex-wrap: wrap;
+}
+
+#copyright {
+    flex-basis: 100%; 
+    text-align: center;
+    font-size: clamp(10px, 2vw, 14px);
+    color: gray;
+}
+
+
 .footer-grid {
     display: grid;
-    grid-template-columns: repeat(9, 1fr);
-    padding-top: 30px;
-    margin-left: 10%;
-    margin-right: 10%;
-    row-gap: 20px;
+    align-items: end;
+    row-gap: 5px;
+    column-gap: 20px;
 }
 
 .footer-grid p {
-    text-align: center;
+    text-align: left;
     font-size: clamp(10px, 2.5vw, 18px);
     align-content: baseline;
     transition: 0.3s;
@@ -388,24 +413,23 @@ footer {
 
 
 
-
-.separator {
+.footer-grid p a:hover {
     color: whitesmoke;
-    font-size: clamp(12px, 3vw, 20px);
-}
-
-.footer-grid p:hover {
-    color: whitesmoke;
+    transition: 0,2s;
 }
 
 .footer-grid p:first-child {
+    text-align: left;
     color: whitesmoke;
     font-size: clamp(12px, 3vw, 20px);
 }
 .footer-grid p:nth-child(10) {
+    text-align: left;
+
     color: whitesmoke;
     font-size: clamp(12px, 3vw, 20px);
 }
+
 
 
 .paddingTop1{
@@ -464,10 +488,7 @@ footer {
     }
 
     .about-text {
-        grid-row: 1;
-        margin-top: 10px;
         grid-column: 1 / span 2;
-        font-size: clamp(16px, 2.5vw, 32px);
     }
 
     .about-card {
@@ -499,7 +520,33 @@ footer {
         padding-top: 0;
         grid-row: 1;
     }
+
+    .footerWrap {
+        column-gap: 100px;  
+        row-gap: 40px;  
+    }
+
+    .footer-grid {
+        column-gap: 40px;
+    }
+
+
+    
+.parallelVideo {
+    width: 50%;
+  }
+
+  #surrealeInstaVid{
+    height: clamp(200px, 25vw, 400px);
+  }
+
+
+  
 }
+
+#sketchFabFrame {
+    height: clamp(400px, 70vw, 600px);
+  }
 
 
 @media (min-width: 768px) {
