--- a/master.css
+++ b/master.css
@@ -70,7 +70,7 @@ video {
 #hamburger {
     margin-left: 5%;
     z-index: 51;
-    color: grey;
+    color: whitesmoke;
 }
 
 #menu ul {
@@ -194,14 +194,9 @@ li a:hover {
 
 
 .about-text {
-    font-size: clamp(14px, 2.5vw, 24px);
-  }
-
-  .real-about-text {
     grid-column: 1 / span 3;
-    font-size: clamp(16px, 3vw, 32px);
-}
-
+    font-size: clamp(14px, 2.5vw, 28px);
+  }
 
 .about-text p {
     transition: 0.3s;
@@ -264,7 +259,7 @@ li a:hover {
     position: relative;
     width: 100%;
     margin-top: 20px;
-    border-radius: 8px;
+    border-radius: 0px;
     padding: 0 20px 0 20px;
     overflow: visible;
     margin-bottom: 100px;
@@ -275,8 +270,8 @@ li a:hover {
 .big-card:hover, .big-card:active {
     padding: 20px;
     background-color: #414141;
-
 }
+
 .big-card p {
     transition: 0.3s;
 }
@@ -286,7 +281,8 @@ li a:hover {
 
 .card-image {
     height: clamp(200px, 45vw, 420px);
-    border-radius: 5px;
+    transition: 0.3s;
+    border-radius: 0px;
     overflow: hidden;
     box-sizing: border-box;
 }
@@ -309,63 +305,82 @@ li a:hover {
 
 .showcase {
     display: grid;
-    gap: clamp(10px, 3.5vw, 40px);
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: clamp(40px, 20vw, 250px);
+    gap: 10px;
+    grid-template-columns: repeat(12, 1fr);
+    /*    gap: clamp(10px, 5.5vw, 40px);
+    grid-auto-rows: clamp(40px, 18vw, 250px); */
+    grid-auto-rows: clamp(8px, 6vw, 80px);
     padding-bottom: 50px;
+
 }
 
+#photoGalleryTitle {
+    padding: 5%;
+    font-size: clamp(24px, 10vw, 120px);
+}
+
+#photoGalleryBio {
+    padding: 5%;
+}
 
 .card {
-    display: flex;
+  /*  display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    background: #353535;
-    border: 1px solid grey;
-    border-radius: 5px;
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box;
-    transition: 0.3s;
+    align-items: center; */
+    object-fit: cover;
+    background-color: whitesmoke;
+    box-sizing: content-box;
+    transition: 0.1s;
     overflow: hidden;
+    border: 0px solid whitesmoke;
+    border-radius: 0px;
+    /* border-bottom-width: clamp(5px, 3vw, 30px);
+    border-top-width: clamp(5px, 3vw, 30px); */
 }
+
 
 .card:hover {
-    border: 6px solid grey;
-    transform: translateY(-5px);
+    border: 4px solid whitesmoke;
 }
 
-.card:nth-child(8n + 1) {
-    grid-row: span 2 / auto;
-}
-.card:nth-child(8n + 2) {
-    grid-column: auto / span 2;
-}
-.card:nth-child(8n + 3) {
-    grid-row: auto / span 1;
-}
-.card:nth-child(8n + 4) {
-    grid-row: span 2 / auto;
-}
-.card:nth-child(8n + 5) {
-    grid-column: auto / span 2;
-}
-.card:nth-child(8n + 6) {
-    grid-row: auto / span 1;
-}
-.card:nth-child(8n + 7) {
-    grid-column: span 2 / auto;
-    grid-row: span 2 / auto;
-}
-.card:nth-child(8n + 8) {
-    grid-column: auto / span 2;
+.card img {
+    border-radius: 0px;
 }
 
-
-.card-tablet {
-    display: flex;
+.card:nth-child(7n + 1) {
+    grid-column: span 9 / auto;
+    grid-row: span 6 / auto;
 }
+.card:nth-child(7n + 2) {
+    grid-column: span 6;
+    grid-row: span 6;
+    border: 0px;
+    background-color: transparent;
+}
+.card:nth-child(7n + 3) {
+    grid-column: 7 / span 6;
+    grid-row: span 6 / auto;
+}
+.card:nth-child(7n + 4) {
+    grid-column: 4 / span 6;
+    grid-row: span 4 / auto;
+}
+.card:nth-child(7n + 5) {
+    grid-column: 1 / span 4;
+    grid-row: span 6 / auto;
+}
+.card:nth-child(7n + 6) {
+    grid-column: 5 / span 7;
+    grid-row: span 6 / auto;
+    border: 0px;
+    background-color: transparent;
+}
+.card:nth-child(7n + 7) {
+    grid-column: 4 / span 9;
+    grid-row: span 4 / auto;
+}
+
 
 
 footer {
@@ -502,23 +517,24 @@ footer p a {
 
     .big-card {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(6, 1fr);
         gap: 20px;
         margin-bottom: 200px;
     }
 
     .card-image {
         grid-row: 1;
-        grid-column: 1 /span 3;
+        grid-column: 1 /span 4;
     }
 
-    .big-card:nth-child(even) .card-image {
-        grid-column: 2 /span 3;
+    a:nth-child(even) .card-image {
+        grid-column: 3 /span 4;
     }
 
     .card-text {
         padding-top: 0;
         grid-row: 1;
+        grid-column: span 2;
     }
 
     .footerWrap {
@@ -546,24 +562,4 @@ footer p a {
 
 #sketchFabFrame {
     height: clamp(400px, 70vw, 600px);
-  }
-
-
-@media (min-width: 768px) {
-    .big-card {
-        grid-template-columns: repeat(6, 1fr);
-    }
-
-    .card-image {
-        grid-column: 1 /span 4;
-    }
-
-    a:nth-child(even) .card-image {
-        grid-column: 3 /span 4;
-    }
-
-
-    .card-text {
-        grid-column: span 2;
-    }
 }
