--- a/master.css
+++ b/master.css
@@ -209,28 +209,39 @@ li a:hover {
 .about-card {
     display: flex;
     grid-row: 2;
-    grid-column: span 3;
+    grid-column: span 4;
     flex-direction: row-reverse;
     justify-content: start;
-    background-color: #414141;
-    padding: 10px;
-    border-radius: 8px;
+    background-color: transparent;
+    padding: 0 10px 0 10px;
+    transition: 0.3s;
 }
 
+.about-card:hover {
+    padding: 10px;
+    background-color: #414141;
+}
+
+.about-card:hover p {
+    color: whitesmoke;
+    transition: 0.3s;
+}
 
 .about-info {
 
     font-size: clamp(14px, 2.5vw, 18px);
 }
 
+.about-card p {
+    transition: 0.3s;
+}
+
+
 .about-info p a{
     transition: 0.4s;
-    color: #141414;
+    color: grey;
 }
-.about-info p {
-    transition: 0.4s;
-    color: #141414;
-}
+
 
 .about-info p:hover {
     color: whitesmoke;
@@ -245,21 +256,16 @@ li a:hover {
     grid-column: 1; */
     height: 100%;
     width: clamp(105px, 20vw, 200px);
-    border-radius: 6px;
     box-sizing: border-box;
     object-fit: cover;
     margin-right: 20px;
 }
 
-.about-img img {
-    border-radius: 6px;
-}
 
 .big-card {
     position: relative;
     width: 100%;
     margin-top: 20px;
-    border-radius: 0px;
     padding: 0 20px 0 20px;
     overflow: visible;
     margin-bottom: 100px;
@@ -321,6 +327,7 @@ li a:hover {
 
 #photoGalleryBio {
     padding: 5%;
+    font-size: clamp(12px, 2.5vw, 28px);
 }
 
 .card {
@@ -371,7 +378,7 @@ li a:hover {
     grid-row: span 6 / auto;
 }
 .card:nth-child(7n + 6) {
-    grid-column: 5 / span 7;
+    grid-column: 5 / span 8;
     grid-row: span 6 / auto;
     border: 0px;
     background-color: transparent;
@@ -535,6 +542,11 @@ footer p a {
         padding-top: 0;
         grid-row: 1;
         grid-column: span 2;
+    }
+ 
+    .card:nth-child(7n + 6) {
+        grid-column: 5 / span 6;
+
     }
 
     .footerWrap {
